xmloff/source/text/XMLTextFrameContext.hxx
@@ -60,6 +60,7 @@ protected:
     /// helper to get the created xShape instance, needs to be overridden
     void removeGraphicFromImportContext(const SvXMLImportContext& rContext) override;
     OUString getGraphicPackageURLFromImportContext(const SvXMLImportContext& rContext) const override;
+    OUString getMimeTypeFromImportContext(const SvXMLImportContext& rContext) const override;
     css::uno::Reference<css::graphic::XGraphic> getGraphicFromImportContext(const SvXMLImportContext& rContext) const override;
 
 public:
